# crate2bib

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  style.css
.github/scripts/: build-openssl.sh  build_utils.sh
.github/workflows/: build.yml  maturin.yml  pytest.yml  test.yml  webapp.yml
citation-cff/: Cargo.toml
citation-cff/src/: lib.rs
crate2bib/: Cargo.toml  README.md  pyproject.toml
crate2bib-app/: Cargo.toml  Dioxus.toml
crate2bib-app/assets/styling/: admonitions.css  main.css
crate2bib-app/src/: main.rs
crate2bib-app/src/components/: hero.rs
crate2bib-cli/: Cargo.toml  README.md
crate2bib-cli/src/: main.rs
crate2bib-py/: Cargo.toml
crate2bib-py/src/: lib.rs
crate2bib-py/test/: serde.py
crate2bib/src/: crates_io.rs  github.rs  lib.rs  types.rs
crate2bib/test/: serde.py
src/: lib.rs
