[package]
name = "crate2bib"
authors = ["Jonas Pleyer<jonas.pleyer@fdm.uni-freiburg.de"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Document", "Element", "Headers", "HtmlElement", "Node", "Request", "RequestInit", "RequestMode", "Window", "console"] }
