[workspace]
resolver = "2"

members = [
    "citation-cff",
    "crate2bib",
    "crate2bib-app",
    "crate2bib-cli",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
