[package]
name = "crate2bib-app"
version = "0.1.0"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
crate2bib = { path = "../crate2bib" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
