[package]
name = "crate2bib-app"
version.workspace = true
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
crate2bib = { path = "../crate2bib" }
circ_buffer = "0.1.9"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
