[package]
name = "crate2bib-cli"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool for the crate2bib crate"
repository = "https://github.com/jonaspleyer/crate2bib"

[dependencies]
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
clap = { version = "4.5.26", features = ["derive"] }
crate2bib = { version = "0.3", path = "../crate2bib/"}
