[package]
name = "crate2bib"
version = "0.1.0"
edition = "2021"

[dependencies]
crates_io_api = { git = "https://github.com/jonaspleyer/crates-io-api", ref = "c021a59f3443fb5b9b1625104d048e0cfa2e65b7" }
tokio = { version = "1.43.0", features = ["macros"] }
semver = { version = "1.0.24", features = [ "serde" ] }
serde_json = "1.0.135"
serde = { version = "1.0", optional = true, features = ["derive"] }
chrono = { version = "0.4", default-features = false }
web-time = { version = "1.1" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros"] }

[features]
default = [ "serde"]
serde = [ "dep:serde" ]
